# BaymaxMini

./: CMakeLists.txt  README.md
src/cpp_core/: main.cpp
src/cpp_core/drivers/: I2C_Bus.cpp  I2C_Bus.h  INA219.cpp  INA219.h  MAX30102.cpp  MAX30102.h  MLX90614.cpp  MLX90614.h  PCA9685.cpp  PCA9685.h  VL53L1X.cpp  VL53L1X.h
src/cpp_core/interfaces/: I_Sensor.h
src/cpp_core/ipc/: SharedData.h
src/cpp_core/modules/: FaceController.cpp  FaceController.h  PowerSystem.cpp  PowerSystem.h  VitalsMonitor.cpp  VitalsMonitor.h
src/cpp_core/utils/: DigitalFilter.h  Easing.h  MathUtils.h
src/python_brain/: main.py
src/python_brain/config/: db_migrate.py  settings.py  settings.yaml
